--- a/td2/factsage.css
+++ b/td2/factsage.css
@@ -8,6 +8,7 @@
             border: 1px solid black;
             padding: 10px;
             
+            grid-row-gap: 10px;
         }
 
         .container1{
@@ -19,49 +20,89 @@
             display: grid;
             grid-template-columns: auto auto auto;
             grid-template-rows: auto;
-
-            grid-template-columns: [columns-start] 25% [columns-end columns-start] 25% [columns-end];;
+            grid-column-gap: 20px;
 
             background-color: yellow;
             border: 1px solid black;
             padding: 10px;
         }
+            #21 {
+                display: grid;
+            }
+            #22 {
+                display: grid;
+            }
 
-        .container30{
+            #23 {
+                display: grid;
+            }
+
+        .container3{
             display: grid;
             grid-template-columns: auto auto;
             grid-template-rows: auto;
-            background-color: rgba(247, 240, 149, 0.411);
+
+            background-color:#f4eda2;
             border: 2px solid black;
             padding: 10px;
+
         }
 
-        .container31{
-            background-color: rgba(247, 240, 149, 0.411);
-            grid-template-rows: [row1-start] 50px [row1-end row2-start] 25% [row2-end];
+        .c31{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto;
+            grid-row-gap: 5px;
         }
 
-        .container32{
-            background-color: rgba(247, 240, 149, 0.411);;
-            grid-template-columns: 300px 150px auto 300px 150px;
-            grid-template-rows: [row1-start] 25% [row1-end row2-start] 25% [row2-end];
+        .c32{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto;
+            grid-row-gap: 5px;
+                
         }
 
         .container4{
-            background-color: rgba(235, 227, 115, 0.411);
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-rows: auto;
+
+            grid-row-gap: 10px;
+            grid-column-gap: 10px;
+
+            background-color:#f4e4a3;
             border: 2px solid black;
             padding: 10px;
         }
 
         .container5{
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto;
+
             background-color: yellow;
             border: 1px solid black;
             padding: 10px;
+
+            grid-column-gap: 20px;
         }
 
+        .c52{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto auto;
 
+            grid-row-gap: 10px;
+        }
 
+        /*#53{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto auto;
 
+            grid-row-gap: 20px;
+        }*/
 
 
                 
