--- a/td3/main.css
+++ b/td3/main.css
@@ -23,7 +23,7 @@
         display: grid;
         grid-template-columns: 66% auto;
         grid-template-rows: auto;
-        background-color: lightgray;
+        background-color: rgb(238,238,238);
         padding: 10px;
     }
 
@@ -52,7 +52,7 @@
         display: grid;
         grid-template-columns:66% auto; /* 66% - 34% */
         grid-template-rows: auto;
-        background-color: lightblue;
+        background-color: rgb(95,158,160);
 
         padding: 10px;
         color: white;
@@ -63,7 +63,6 @@
         display: grid;
         grid-template-columns:66% auto; /* 66% - 34% */
         grid-template-rows: auto;
-        background-color: lightblue;
 
         /* grid-column-gap: 50px;  */
     }
@@ -72,7 +71,7 @@
             content: "\e019";
         }
 
-        .glyphicon-plus:before {
+        .plus1:before {
             content: "\002b";
             
         }
@@ -87,4 +86,30 @@
 
         .glyphicon-thumbs-up:before {
             content: "\e125";
+            color:white;
+            font-size: 16px;
         }
+
+        .envoyer{
+            color:white;
+            background-color:rgb(95,158,160);
+            font-size: 16px;
+        }
+
+        .EcritureMessage{
+            font-size: 16px;
+        }
+
+    .glyphicon-star:before {
+        content: "\e006";
+        color:rgb(255,103,27)
+    }
+
+    .glyphicon-minus:before {
+        content: "\2212";
+    }
+
+    .glyphicon-plus:before {
+    content: "\002b";
+            
+    }
