--- a/td3/main.css
+++ b/td3/main.css
@@ -27,22 +27,10 @@
         padding: 10px;
     }
 
-        .set-ico-list-item img {
-            position: relative;
-            top: -4px;
-            width: 32px;
-            height: 32px;
-            vertical-align: middle;
-        }
+    .iconesHaut{
+        word-spacing: 10px;
+    }
 
-        
-        .user:before {
-            content: "\e008";
-        }
-
-        .bell:before {
-            content: "\e123";
-        }
 
         .cog1:before {
             content: "\e019";
@@ -53,18 +41,31 @@
         grid-template-columns:66% auto; /* 66% - 34% */
         grid-template-rows: auto;
         background-color: rgb(95,158,160);
+        
+        /* border:1px solid white; */
 
-        padding: 10px;
+        /* padding: 10px; */
         color: white;
         /* grid-column-gap: 50px;  */
     }
 
+    .con22{
+        border-right:1px solid white;
+        padding: 10px;
+    }
+    
     .con23{
         display: grid;
-        grid-template-columns:66% auto; /* 66% - 34% */
-        grid-template-rows: auto;
-
+        grid-template-columns:auto; 
+        grid-template-rows: auto auto;
+        padding: 10px;
         /* grid-column-gap: 50px;  */
+    }
+
+    .con231{
+        display: grid;
+        grid-template-columns:auto auto; 
+        grid-template-rows: auto;
     }
 
         .cog2:before {
@@ -79,16 +80,27 @@
     .container3{
         display: grid;
         grid-template-columns: 66% auto; /* 75% - 34% */
-        grid-template-rows: auto;
+        grid-template-rows: 500px;
         background-color: white;
     }
 
 
-        .glyphicon-thumbs-up:before {
-            content: "\e125";
-            color:white;
-            font-size: 16px;
-        }
+    .message{
+        display: grid;
+        grid-template-columns: auto; /* 75% - 34% */
+        grid-template-rows: 93% auto;
+
+        border-right:1px solid rgb(238,238,238);;
+    }
+
+    .bar{
+        display: grid;
+        grid-template-columns: auto auto auto; /* 75% - 34% */
+        grid-template-rows: 100%;
+        position: relative;
+        bottom: 10px;
+    }
+
 
         .envoyer{
             color:white;
