quelques modifications aux interfaces et ajout d'une fonctionalité

--- a/td3/main.css
+++ b/td3/main.css
@@ -27,8 +27,10 @@
         padding: 10px;
     }
 
+
     .iconesHaut{
         word-spacing: 10px;
+        /* border-spacing: 100px; */
     }
 
 
@@ -68,14 +70,59 @@
         grid-template-rows: auto;
     }
 
+    
+
         .cog2:before {
             content: "\e019";
+        }
+
+        .plus{
+            color:white;
         }
 
         .plus1:before {
             content: "\002b";
             
         }
+
+                        /* The Modal (background) */
+            .modal {
+                display: none; /* Hidden by default */
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 100px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+            
+            /* Modal Content */
+            .modal-content {
+                background-color: #fefefe;
+                margin: auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%;
+            }
+            
+            /* The Close Button */
+            .close {
+                color: #aaaaaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+            
+            .close:hover,
+            .close:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
 
     .container3{
         display: grid;
@@ -112,16 +159,14 @@
             font-size: 16px;
         }
 
-    .glyphicon-star:before {
-        content: "\e006";
-        color:rgb(255,103,27)
+    .fa-star{
+        color:rgb(255,103,27);
     }
 
-    .glyphicon-minus:before {
-        content: "\2212";
+    .fa-minus {
+        color:rgb(255,103,27);
     }
 
-    .glyphicon-plus:before {
-    content: "\002b";
-            
+    .fa-plus {
+        color:rgb(95,158,160);
     }
