--- a/td3/main.css
+++ b/td3/main.css
@@ -142,12 +142,18 @@
 
     .bar{
         display: grid;
-        grid-template-columns: auto auto auto; /* 75% - 34% */
+        grid-template-columns: 40px auto 75px; /* 75% - 34% */
         grid-template-rows: 100%;
         position: relative;
         bottom: 10px;
     }
 
+        .like{
+            background-color:rgb(95,158,160);
+        }
+        .fa-thumbs-up{
+            color:white
+        }
 
         .envoyer{
             color:white;
