--- a/td3/main.css
+++ b/td3/main.css
@@ -33,25 +33,32 @@
 
 .iconesHaut {
     /*margin-left: auto;*/
+    position: relative;
+
+
     word-spacing: 15px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 55% 15% 15% 15%;
     grid-template-rows: auto;
     /* border-spacing: 100px; */
+    text-align: right;
+    font-size: 20px;
 }
 
     .utilisateur{
         display: grid;
         grid-template-columns: auto;
         grid-template-rows: auto auto;
+        text-align: center;
     }
 
     .fa-user{
-       
+
     }
 
     .nomUtilisateur{
         color:rgb(34,135,21);
+
     }
 
     .cog1:before {
