--- a/td3/main.css
+++ b/td3/main.css
@@ -6,10 +6,10 @@
 .general{
     display: grid;
     /* comment faire pour occuper toute la longuere de la page?? */
-    grid-template-columns: 100%;
-    grid-template-rows: 100%;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
     background-color: lightgray;
-
+    height: 100%;
     padding: 3px;
         
     /*grid-row-gap: 5px;*/
@@ -104,13 +104,10 @@
         content: "\e019";
     }
 
-    .plus{
-        color:white;
-    }
 
     .plus1:before {
         content: "\002b";
-            
+        cursor: pointer;
     }
 
                     /* The Modal (background) */
@@ -153,8 +150,9 @@
 .container3{
     display: grid;
     grid-template-columns: 66% auto; /* 75% - 34% */
-    grid-template-rows: 500px;
+    grid-template-rows: 100%;
     background-color: white;
+    height: 85%;
 }
 
 
@@ -163,6 +161,7 @@
     grid-template-columns: auto; /* 75% - 34% */
     grid-template-rows: 93% auto;
     border-right:1px solid rgb(238,238,238);
+
 }
 
 .messageText{
@@ -172,7 +171,7 @@
 .bar{
     display: grid;
     grid-template-columns: 40px auto 75px; /* 75% - 34% */
-    grid-template-rows: 100%;
+    grid-template-rows: 70%;
     position: relative;
     bottom: 10px;
 }
@@ -198,13 +197,15 @@
     color:rgb(255,103,27);
 }
 
-.fa-minus {
+ .fa-minus {
     color:rgb(255,103,27);
+    cursor: pointer;
 }
 
 .fa-plus {
     color:rgb(95,158,160);
-}
+    cursor: pointer;
+} 
 
 .groupes{
     display: grid;
