--- a/td3/main.css
+++ b/td3/main.css
@@ -18,8 +18,11 @@
     /* margin: 0px; */
     /*grid-column-gap: 20px; */
 }
-#messageText{
-    padding:20px;
+#messageText {
+    /*display: grid;
+    grid-template-columns: 111%;
+    grid-template-rows: 45px;*/
+    padding: 20px;
     overflow-y: scroll;
     overflow-x: hidden;
     font-family: Helvetica, Arial, sans-serif;
@@ -40,34 +43,65 @@
 
 #messageFromOthers {
     display: inline-block;
-    float: right;
+    float: left;
     background: rgb(241,240,240);
     color: black;
     max-width: 40%;
-    margin-left: 50%;
     margin-bottom: 3px;
     padding: 10px;
     border-radius: 10px 10px 10px 10px;
     overflow-wrap: break-word;
 }
 
-.container1{
+#nomOther {
+    display: inline-block;
+    float: left;
+    color: gray;
+    max-width: 40%;
+    margin-bottom: 3px;
+    padding: 10px;
+    overflow-wrap: break-word;
+    border-radius: 10px 10px 10px 10px;
+}
+
+#date {
+    display: inline-block;
+    float: right;
+    color: black;
+    max-width: 40%;
+    margin-left: 50%;
+    margin-bottom: 3px;
+    padding: 10px;
+    overflow-wrap: break-word;
+}
+
+#dateOther {
+    display: inline-block;
+    float: left;
+    color: black;
+    max-width: 40%;
+    margin-bottom: 3px;
+    padding: 10px;
+    overflow-wrap: break-word;
+}
+
+
+.container1 {
     display: grid;
     grid-template-columns: 66% auto;
     grid-template-rows: auto;
     background-color: rgb(238,238,238);
     padding: 10px;
     align-items: center;
-    padding-left:20px;
-    padding-right:20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
+
 
 
 .iconesHaut {
     /*margin-left: auto;*/
     position: relative;
-
-
     word-spacing: 15px;
     display: grid;
     grid-template-columns: 55% 15% 15% 15%;
