--- a/td3/main.css
+++ b/td3/main.css
@@ -1,27 +1,13 @@
 
-    
-    /* "bootstrap" pour la division du tableau et pour les couleurs.*/
-    /* "fantawesome" => pour les icones */
-
 .general{
     display: grid;
-    /* comment faire pour occuper toute la longuere de la page?? */
     grid-template-columns: auto;
     grid-template-rows: auto;
     background-color: lightgray;
     height: 100%;
     padding: 3px;
-        
-    /*grid-row-gap: 5px;*/
-
-    /* border: 1px solid black; */
-    /* margin: 0px; */
-    /*grid-column-gap: 20px; */
 }
 #messageText {
-    /*display: grid;
-    grid-template-columns: 111%;
-    grid-template-rows: 45px;*/
     padding: 20px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -96,9 +82,7 @@
     float: left;
     background: red;
     color: black;
-    max-width: 70%;
-    margin-right: 15%;
-    margin-left: 15%;
+    max-width: 40%;
     margin-bottom: 3px;
     padding: 10px;
     overflow-wrap: break-word;
@@ -128,8 +112,7 @@
 }
 
 .fa-users {
-    /*width: 20px;
-    height: 20px;*/
+
     font-size: 25px;
 
     padding-top: 25px
@@ -143,13 +126,11 @@
 }
 
 .iconesHaut {
-    /*margin-left: auto;*/
     position: relative;
     word-spacing: 15px;
     display: grid;
     grid-template-columns: 55% 15% 15% 15%;
     grid-template-rows: auto;
-    /* border-spacing: 100px; */
     text-align: right;
     font-size: 27px;
 }
@@ -196,15 +177,10 @@
 
 #container2{
     display: grid;
-    grid-template-columns:66% auto; /* 66% - 34% */
+    grid-template-columns:66% auto; 
     grid-template-rows: auto;
     background-color: rgb(95,158,160);
-        
-    /* border:1px solid white; */
-
-    /* padding: 10px; */
     color: white;
-    /* grid-column-gap: 50px;  */
 }
 
 #con22{
@@ -217,7 +193,7 @@
     grid-template-columns:auto; 
     grid-template-rows: auto auto;
     padding: 10px;
-    /* grid-column-gap: 50px;  */
+
 }
 
 .con231{
@@ -227,7 +203,10 @@
     align-items: center;
 }
 
-    
+#disponible {
+    word-spacing: 7px;
+    text-align: right;
+}
 
     .cog2:before {
         content: "\e019";
@@ -239,46 +218,10 @@
         cursor: pointer;
     }
 
-                    /* The Modal (background) */
-        .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
-            padding-top: 10px; /* Location of the box */
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        }
-            
-        /* Modal Content */
-        .modal-content {
-            background-color: #fefefe;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-        }
-            
-        /* The Close Button */
-        .close {
-            color: #aaaaaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-            
-        .close:hover,
-        .close:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
-        }
 
 .container3{
     display: grid;
-    grid-template-columns: 66% auto; /* 75% - 34% */
+    grid-template-columns: 66% auto; 
     grid-template-rows: 100%;
     background-color: white;
     height: 85%;
@@ -287,7 +230,7 @@
 
 .message {
     display: grid;
-    grid-template-columns: auto; /* 75% - 34% */
+    grid-template-columns: auto;
     grid-template-rows: 93% auto;
     border-right: 1px solid rgb(238,238,238);
 
@@ -296,8 +239,8 @@
 
 .bar{
     display: grid;
-    grid-template-columns: 40px auto 75px; /* 75% - 34% */
-    
+    grid-template-columns: 40px auto 75px; 
+    grid-template-rows: 70%;
     position:relative;
     bottom: 0px;
 }
